Description of what you changed

--- a/buddy-angular/buddyproject/src/app/pages/homes/homes.component.html
+++ b/buddy-angular/buddyproject/src/app/pages/homes/homes.component.html
@@ -23,7 +23,7 @@
     <p>Your carpooling journey starts here.</p>
     
     <div class="features">
-      <div class="feature-card" routerLink="/riderequest" style="cursor: pointer;">
+      <div class="feature-card" routerLink="/group" style="cursor: pointer;">
         <h3>🗺️ Find Rides</h3>
         <p>Search for available rides in your area</p>
       </div>
